# RTAM

./: CMakeLists.txt  README.md
CMake/: FindOptiX.cmake
data/: tetra-1.ray  tetra.ray
src/: CMakeLists.txt
src/CMake/: configure_optix.cmake
src/test/: CMakeLists.txt  CUDABuffer.h  LaunchParams.h  Renderer.cpp  Renderer.h  main.cpp  optix7.h
sutil/: Scene.cpp
test/: CMakeLists.txt  CUDABuffer.h  Camera.h  LaunchParams.h  Random.h  Renderer.cpp  Renderer.h  Triangle.h  World.cpp  World.h  devicePrograms.cu  main.cpp
tomo/: CMakeLists.txt  LaunchParams.h  Renderer.cpp  Renderer.h  devicePrograms.cu  main.cpp
